tests/NormalTests/paczka1/small_fuzzy/47317363.err
Error in line 1: 8Pk73g S72 68,9
Error in line 2: wd5nwS S72 72,6
Error in line 3: 8Pk73g A799 59,2
